[package]
name = "crab_runner"
version = "0.1.0"
authors = ["Chuong Dong <chuongdongnguyen1012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#![feature(asm)]
[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "fileapi", "winnt", "handleapi", "memoryapi", "processthreadsapi", "winbase", "synchapi", "winerror"]}
widestring = "*"
